[package]
name = "alphabet-encoder"
version = "0.1.1"
authors = ["Jake Vossen <jake@vossen.dev>"]
edition = "2018"
description = "A quick and dirty way to deal with escape characters"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/jakevossen5/alphabet-encoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
